assets/css/main.css
/* ... */
.xl-turquoise {
  background: #bdf3f5 !important;
}
.xl-khaki {
  background: #f9f1d8 !important;
}
.xl-parpl {
  background: #efebf4 !important;
}
.xl-salmon {
  background: #ffd4c3 !important;
}
.xl-blue {
  background: #e0eff5 !important;
}
.xl-seagreen {
  background: #ebf2e8 !important;
}
.xl-slategray {
  background: #eceeef !important;
}
.bg-black {
  background: #191f28;
}
.btn-white {
  background-color: #fff;
  color: #000;
}
.inlineblock,
.navbar-header,
.navbar-nav.navbar-left,
.navbar-nav.navbar-left > li,
.navbar-nav > li > a,
.sidebar,
.right-sidebar .choose-skin li,
.right-sidebar .choose-skin li div,
.right-sidebar .theme-light-dark li,
.wizard .actions ul,
.dropdown-menu ul.menu .icon-circle,
.dropdown-menu ul.menu .menu-info,
.team-info li,
.weather .days li,
.agent .agent-content .agent-contact-details li span,
.agent .agent-content .social-icons li,
.agent .agent-content .social-icons li a,
.member-card .social-links li,
.social_icon,
.w_calender span + span,
.w_calender ul li,
.contact .c_list .checkbox,
.contact .c_list .c_name {
  display: inline-block;
}
.displayblock,
.navbar-nav.navbar-left .dropdown-menu ul.menu .media .media-body .name,
.navbar-nav.navbar-left .dropdown-menu ul.menu .media .media-body .message,
.sidebar .menu .list a,
.card .header .header-dropdown li a,
.card .header h2 small,
.wizard .actions,
.wizard .actions a,
.wizard .actions a:hover,
.wizard .actions a:active,
.wizard .steps,
.wizard .steps a,
.wizard .steps a:hover,
.wizard .steps a:active,
.dropdown-menu ul.menu li a,
.dropdown-menu .footer a,
.dropdown-menu > li > a,
.page-calendar .event-name h4 span,
.page-calendar .event-name p,
.activity li a,
.user_activity .b-accent .sl-item .sl-content small,
.project_widget .pw_img:before,
.project_widget .pw_content .pw_meta small,
.project_widget .pw_content .pw_meta span,
.twitter-feed p,
.weather .days li .degrees,
.weather2 .city-selected .temp h2,
.agent .agent-avatar a,
.agent .agent-content .agent-contact-details,
.inbox-widget .inbox-inner:hover .hover_action,
.inbox-widget .inbox-inner .inbox-item-info .inbox-message,
.member-card .text-pink,
.social_media_table .list-name,
.new_friend_list li .join_date,
.w_calender span,
.profile-page .profile-header .job_post,
.sprice li,
.sprice2 .data li,
.file_manager .file .file-name small {
  display: block;
}
.z-index {
  z-index: 9999;
}
.table tr th,
.table tr td {
  white-space: nowrap;
}
.table.td_2 thead th {
  border: 0;
  font-weight: normal;
  text-transform: uppercase;
  color: black;
  font-size: 13px;
  font-weight: bold;
  background-color: red;
  vertical-align: middle;
}
.table.td_2 tr td {
  border: 0;
}
.table.vcenter tr td {
  vertical-align: middle;
}
.fullscreen.is-fullscreen .zmdi-fullscreen::before {
  content: "\f16c";
}
@media screen and (max-width: 767px) {
  section.content {
    margin-left: 0 !important;
    margin-right: 0px;
    padding: 0;
  }
  .hidden-md-down {
    display: none !important;
  }
}
@media screen and (max-width: 640px) {
  .hidden-sm-down {
    display: none !important;
  }
}
.dashboard-donut-chart {
  height: 265px;
}
.bootstrap-tagsinput {
  -webkit-box-shadow: none !important;
  -moz-box-shadow: none !important;
  -ms-box-shadow: none !important;
  box-shadow: none !important;
  border: none !important;
}

.ms-container {
  width: auto !important;
}
.ms-container .ms-list {
  -webkit-box-shadow: none !important;
  -moz-box-shadow: none !important;
  -ms-box-shadow: none !important;
  box-shadow: none !important;
  -webkit-border-radius: 0 !important;
  -moz-border-radius: 0 !important;
  -ms-border-radius: 0 !important;
  border-radius: 0 !important;
}
.ms-container .ms-list.ms-focus {
  -webkit-box-shadow: none !important;
  -moz-box-shadow: none !important;
  -ms-box-shadow: none !important;
  box-shadow: none !important;
}
.ms-container .ms-selectable,
.ms-container .ms-selection {
  min-width: 250px !important;
}
.ms-container .ms-selectable li.ms-hover,
.ms-container .ms-selection li.ms-hover {
  color: #000000 !important;
  background-color: #e6e6e6 !important;
}
.ms-container .ms-selectable li.ms-elem-selectable,
.ms-container .ms-selectable li.ms-elem-selection,
.ms-container .ms-selection li.ms-elem-selectable,
.ms-container .ms-selection li.ms-elem-selection {
  padding: 9px 15px 6px 15px !important;
}
.ms-container .ms-optgroup-label {
  padding: 5px 0 0 8px !important;
}
.card {
  -moz-transition: all 0.5s;
  -o-transition: all 0.5s;
  -webkit-transition: all 0.5s;
  transition: all 0.5s;
  background: #fff;
  border-radius: 0.1875rem;
  margin-bottom: 30px;
  border: 0;
  display: inline-block;
  position: relative;
  width: 100%;
  box-shadow: none;
}
.card .card-inside-title {
  color: #000;
  display: block;
}
.card .card-inside-title small {
  color: #9e9e9e;
  display: block;
}
.card .card-inside-title small a {
  color: #757575;
  font-weight: 700;
}

.card .header {
  color: #424242;
  padding: 20px;
  position: relative;
  box-shadow: none;
}
.card .header .header-dropdown {
  position: absolute;
  top: 14px;
  right: 20px;
  list-style: none;
}
.card .header .header-dropdown li {
  display: inline-block;
}
.card .header .header-dropdown li a {
  padding: 5px 10px;
}
.card .header .header-dropdown li .dropdown-menu {
  padding: 5px;
  overflow: hidden;
  right: 0 !important;
  left: auto !important;
  transform: none !important;
  top: 30px !important;
}
.card .header .header-dropdown li .dropdown-menu li {
  display: block !important;
}
.card .header .header-dropdown li .dropdown-menu li a {
  padding: 5px 10px;
}
.card .header .header-dropdown i {
  -moz-transition: all 0.5s;
  -o-transition: all 0.5s;
  -webkit-transition: all 0.5s;
  transition: all 0.5s;
  color: #9e9e9e;
}
.card .header .header-dropdown i:hover {
  color: #000;
}
.card .header h2 {
  color: black;
  position: relative;
}
.card .header h2::before {
  position: absolute;
  width: 2px;
  height: 18px;
  left: -20px;
  top: 0;
  content: "";
}
/* ... */

